--- a/Nicoe.Gui/Form1.resx
+++ b/Nicoe.Gui/Form1.resx
@@ -135,4 +135,7 @@
   <metadata name="SaveFileDialogPng.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>719, 17</value>
   </metadata>
+  <metadata name="OpenFileDialogIso.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>871, 17</value>
+  </metadata>
 </root>
